[tool.poetry]
name = "tvm-news"
version = "0.1.0"
description = ""
authors = ["Jared Roesch <jroesch@octoml.ai>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tvm-news = 'tvm_news:main'
